Added maven.yml workflow; removed .travis.yml; removed enforcer plugin, etc.